--- a/redis-cache/Dockerfile
+++ b/redis-cache/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.9-slim
 
 WORKDIR /usr/src/app
 
+RUN apt update && apt install -y iputils-ping
+
 COPY cache.py ./
 COPY requirements.txt ./
 
